--- a/content/resources/21g-019s05-th.md
+++ b/content/resources/21g-019s05-th.md
@@ -5,6 +5,8 @@ description: Student conversation. Image courtesy of the MIT African Internet Te
 file: /courses/21g-019-communicating-across-cultures-spring-2005/84f78a5c46df0706e1197d8fcb85cce7_21g-019s05-th.jpg
 file_size: 7536
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: "Student conversation. (Image courtesy of the\_[MIT African Internet Technology\
     \ Initiative](http://africa.mit.edu/).)"
