--- a/content/resources/21g-019s05.md
+++ b/content/resources/21g-019s05.md
@@ -5,6 +5,8 @@ description: Student conversation. Image courtesy of the MIT African Internet Te
 file: /courses/21g-019-communicating-across-cultures-spring-2005/73f12f117f42712f05f55cc52ac60fcc_21g-019s05.jpg
 file_size: 71383
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: "Student conversation. (Image courtesy of the\_[MIT African Internet Technology\
     \ Initiative](http://africa.mit.edu/).)"
