Sync all content

--- a/content/resources/21g-019s05-th.md
+++ b/content/resources/21g-019s05-th.md
@@ -5,11 +5,9 @@ description: Student conversation. Image courtesy of the MIT African Internet Te
 file: /courses/21g-019-communicating-across-cultures-spring-2005/84f78a5c46df0706e1197d8fcb85cce7_21g-019s05-th.jpg
 file_size: 7536
 file_type: image/jpeg
-hide_download: true
-hide_download_original: null
 image_metadata:
-  caption: "Student conversation. (Image courtesy of the\_[MIT African Internet Technology\
-    \ Initiative](http://africa.mit.edu/).)"
+  caption: "Student conversation. (Image courtesy of the\_{{% resource_link \"8aa40402-aea1-4cbb-aa8d-e434ff4fab63\"\
+    \ \"MIT African Internet Technology Initiative\" %}}.)"
   credit: Image courtesy of the MIT African Internet Technology Initiative.
   image-alt: Students having a conversation in a cafeteria.
 learning_resource_types: []
